/trades /defense endpoints and adding merrick option

--- a/views/compare.html
+++ b/views/compare.html
@@ -12,9 +12,12 @@
       .stats_div { width: 60%; }
       .checkbox_div { width: 40%; }
       table { width: 80%; border-collapse: collapse; justify-content: center; }
-      #redzone_table, #fp_table { width: 50%; }
+      #fp_table { width: 50%; }
       #borischen_table { width: 50%; display: flex; flex-direction: column; }
       #borischen_table span { text-align: center; }
+      #opponent_table table { width: 100%; }      
+      #opponent_table table th { font-style: italic; text-decoration: underline; }
+      #opponent_table table th, #opponent_table table td { border:0px; padding: 0; margin: 0; text-align: left; }
       td, th { padding: 5px; border: 1px solid; text-align: center; }
       td.best { background-color: #00ff00; }
       h4 { margin: 0; margin-top: 5%; font-size: 22px; text-align: center; }
@@ -36,6 +39,8 @@
       {{ nextgen_html|safe }}
 
       {{ redzone_html|safe }}
+
+      {{ opp_html|safe }}
       <!-- 
       <div class="stats_div">
         <img src="/{{fp_path}}-full.png">
