--- a/views/defense.html
+++ b/views/defense.html
@@ -3,6 +3,7 @@
   <head>
     <title>Defensive Ranks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    <!-- <link rel="stylesheet" href="/static/css/teams.css" type="text/css"> -->
     <style>
       html { min-height:100%; position: relative; }
       body { height: 100%;margin:0; }
