--- a/views/rbbc.html
+++ b/views/rbbc.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>RBBC Trends</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+		<link rel="stylesheet" href="/static/css/teams.css" type="text/css">
 	</head>
 	<style>
 		body { font-size: 18px; }
@@ -12,10 +13,10 @@
 		}
 		#team_click_div { width:70%; margin-left: 15%;}
 		.team_click { text-decoration: none; }
-		table { width: 70%;margin-left: 15%;margin-top: 20px;text-align: center;border:1px solid;border-collapse: collapse;}
+		table { width: 80%;margin-left: 10%;margin-top: 20px;text-align: center;border:1px solid;border-collapse: collapse;}
 		table tr { border-bottom: 1px solid; }
 		table tr:nth-child(even) { background-color: #f1f1f1; }
-		table td { border-left: 1px solid; border-right: 1px solid; }
+		table td, table th { border: 1px solid; }
 		#header { width: 100%; text-align: center; }
 		#nav { padding: 10px; }
 		#nav a { text-decoration: none; }
@@ -34,6 +35,9 @@
 				/
 				<a href="#">Redzone Look Trends</a>
 			</div>
+		</div>
+		<div style="text-align: center;">
+			<h4>Numbers in parenthesis are trends from week {{curr_week}}</h4>
 		</div>
 		<div id="table_wrapper">
 			{{table|safe}}
