--- a/views/rbbc.html
+++ b/views/rbbc.html
@@ -8,13 +8,17 @@
 		<link href="https://unpkg.com/tabulator-tables@4.9.3/dist/css/tabulator.min.css" rel="stylesheet">
 	</head>
 	<style>
-		body { font-size: 18px; }
+		body { 
+			font-size: 18px;
+			height: 100vh;
+		}
 		#rbbcTable {
 			width: max-content;
 		}
 		#tableDiv {
 			display: flex;
 			justify-content: center;
+			height: 80%;
 		}
 		#team_click_div { width:70%; margin-left: 15%;}
 		.team_click { text-decoration: none; }
