--- a/static/css/teams.css
+++ b/static/css/teams.css
@@ -121,11 +121,11 @@
 	color: #006778;
 	background: #D7A22A;
 }
-.kan {
+.kan, .kc {
 	background: #e31837;
 	color: #fff;
 }
-.kan button {
+.kan button, .kc button {
 	color: #e31837;
 	background: #fff;
 }
