--- a/views/defense.html
+++ b/views/defense.html
@@ -14,7 +14,7 @@
         display: none;
         justify-content: center;
         align-items: center;
-        position: absolute;
+        position: fixed;
         top: 0;
         left: auto;
         width: 100%; height: 100vh;
