--- a/views/rbbc.html
+++ b/views/rbbc.html
@@ -145,7 +145,7 @@
 					columns: [
 						{title: "Player", field: "player", headerFilter: "input"},
 						{title: "Team", field: "team", width: "80", hozAlign: "center", formatter: teamFormatter, editor: "input", headerFilter: "select", headerFilterPlaceholder:"All", headerFilterFunc: teamFilter, headerFilterParams:{values: teamNames}},
-						{title: "Avg Snap %", field: "snaps", formatter: percentFormatter, hozAlign: "center"},
+						{title: "Snap %", field: "snaps", formatter: percentFormatter, hozAlign: "center"},
 						{title: "RZ Looks Per Game", field: "looksPerGame", formatter: decimalFormatter, hozAlign: "center"},
 						{title: "RZ Looks Share (RBs)", field: "looksShare", formatter: percentFormatter, hozAlign: "center"},
 						{title: "Targets Per Game", field: "targetsPerGame", formatter: decimalFormatter, hozAlign: "center"},
