--- a/views/props.html
+++ b/views/props.html
@@ -129,7 +129,7 @@
 				else if (prop == "pass_td") return "PASS TDs";
 				else if (prop == "pass_yd") return "PASS YDs";
 				else if (prop == "recv_rec") return "REC";
-				else if (prop == "tackles_combined") return "TACKLES+ASST";
+				else if (prop == "tackles_combined") return "TACKLES";
 				return prop;
 			}
 
@@ -156,7 +156,9 @@
 							if (propType == "rush_recv_yd") {
 								avg += stats[wk].rush_yds + stats[wk].rec_yds;
 							} else {
-								avg += stats[wk][convertType(propType)];
+								if (stats[wk][convertType(propType)]) {
+									avg += stats[wk][convertType(propType)];
+								}
 							}
 						}
 					}
@@ -244,6 +246,8 @@
 				TABLE = new Tabulator("#propsTable", {
 					tooltipsHeader: true,
 					ajaxURL: "/getProps",
+					responsiveLayout:"collapse",
+					layout: "fitDataFill",
 					//layout: window.innerWidth <= 450 ? "fitData" : "fitColumns",
 					groupBy: "team",
 					groupHeader: function(value, count, data, group){
@@ -255,9 +259,12 @@
 						{column: "team", dir: "asc"}
 					],
 					columns: [
+						{formatter:"responsiveCollapse", width:30, minWidth:30, hozAlign:"center", resizable:false, headerSort:false},
+						/*
 						{formatter:"rowSelection", hozAlign:"center", headerSort:false, cellClick:function(e, cell){
 							cell.getRow().toggleSelect();
 						}},
+						*/
 						{title: "Player", field: "player", headerFilter: "input"},
 						{title: "Team", field: "team", width: "80", hozAlign: "center", formatter: teamFormatter, editor: "input", headerFilter: "select", headerFilterPlaceholder:"All", headerFilterFunc: teamFilter, headerFilterParams:{values: teamNames}},
 						{title: "Opp", field: "opponent", width: "80", hozAlign: "center", formatter: teamFormatter, editor: "input", headerFilter: "select", headerFilterPlaceholder:"All", headerFilterFunc: teamFilter, headerFilterParams:{values: teamNames}},
@@ -267,8 +274,8 @@
 						{title: "SZN AVG", field: "avg", formatter: avgFormatter, hozAlign: "center"},
 						{title: "Games Over", field: "over", formatter: overFormatter, hozAlign: "center"},
 						{title: "Last Game", field: "lastOver", formatter: lastOverFormatter, hozAlign: "center"},
-						{title: "", field: "overOdds"},
-						{title: "", field: "underOdds"},
+						{title: " ", field: "overOdds"},
+						{title: " ", field: "underOdds"},
 					]
 				})
 			}
