--- a/views/nbaprops.html
+++ b/views/nbaprops.html
@@ -173,7 +173,7 @@
 			TABLE.setFilter([
 				//{field:"avgMin", type:">=", value:15},
 				//{field:"line", type:">", value:1},
-				{field:"propType", type:"=", value:"ast"},
+				{field:"propType", type:"=", value:"pts"},
 			]);
 		</script>
 
