--- a/views/nhlprops.html
+++ b/views/nhlprops.html
@@ -42,25 +42,30 @@
 		</div>
 		<div id="footer">
 			<button onclick="print();">PRINT</button>
+            <button onclick="print('csv');">PRINT CSV</button>
 		</div>
 		<script>
 			let TABLE;
 			const teamNames = ["All", "ANA", "ARI", "BOS", "BUF", "CAR", "CBJ", "CGY", "CHI", "COL", "DAL", "DET", "EDM", "FLA", "LA", "MIN", "MTL", "NJ", "NSH", "NYI", "NYR", "OTT", "PHI", "PIT", "SEA", "SJ", "STL", "TB", "TOR", "VAN", "VGK", "WPG", "WSH"];
 
-			function print() {
+			function print(output = "") {
                 let rows = TABLE.getSelectedRows();
                 if (rows.length == 0) {
                     rows = TABLE.getRows("active");
                 }
                 const args = [];
                 let s = "";
-                s += "NAME|TEAM|PROP|LINE|SZN AVG|% OVER|LAST GAMES|LAST YR % OVER|Odds\n";
-                s += ":--|:--|:--|:--|:--|:--|:--|:--|:--\n";
+                const joinChar = (output == "csv") ? ";" : "|";
+                s += ["NAME","TEAM","PROP","LINE","SZN AVG","% OVER","LAST GAMES","LAST YR % OVER","Odds"].join(joinChar);
+                s += "\n";
+                if (output != "csv") {
+                    s += ":--|:--|:--|:--|:--|:--|:--|:--|:--\n";
+                }
                 for (row of rows) {
                     const data = row.getData();
                     let odds = data.totalOver >= 50 ? data.overOdds : data.underOdds;
                     odds = odds.split(" ")[1].substring(1, 5);
-                    s += [data.player, data.team, data.propType, data.line, data.avg, data.totalOver+"%", data.last5, data.lastTotalOver+"%",odds].join("|");
+                    s += [data.player, data.team, data.propType, data.line, data.avg, data.totalOver+"%", data.last5, data.lastTotalOver+"%",odds].join(joinChar);
                     s += "\n";
                 }
                 console.log(s);
@@ -174,7 +179,8 @@
 				//{field:"avgMin", type:">=", value:5},
 				//{field:"line", type:">", value:1},
 				
-                {field:"propType", type:"!=", value:"goals"},
+                //{field:"propType", type:"!=", value:"goals"},
+                {field:"propType", type:"=", value:"sog"},
 			]);
 		</script>
 
