--- a/views/nbaprops.html
+++ b/views/nbaprops.html
@@ -183,7 +183,7 @@
 				//{field:"avgMin", type:">=", value:15},
 				//{field:"line", type:">", value:1},
 				
-				{field:"propType", type:"=", value:"pts"},
+				//{field:"propType", type:"=", value:"ast"},
 			]);
 		</script>
 
